its better to call window a window not a widget

--- a/stw.1
+++ b/stw.1
@@ -1,6 +1,6 @@
 .TH STW 1 stw
 .SH NAME
-stw \- simple X text widget
+stw \- simple X text window
 .SH SYNOPSIS
 .B stw
 .RB [ \-x
@@ -29,7 +29,7 @@ stw \- simple X text widget
 .RI [ arg ...]
 .SH DESCRIPTION
 .B stw
-is a simple X text widget.
+is a simple X text window.
 .SH OPTIONS
 .TP
 .BI \-x " pos"
@@ -49,10 +49,10 @@ text alignment.
 Must be one of {lrc} for left, right and centered
 .TP
 .BI \-f " foreground"
-foreground widget color in hex or as a color name
+foreground window color in hex or as a color name
 .TP
 .BI \-b " background"
-background widget color in hex or as a color name
+background window color in hex or as a color name
 .TP
 .BI \-F " font"
 text font in format, supported by fontconfig
