Add VERSION variable and -V option

--- a/stw.1
+++ b/stw.1
@@ -1,8 +1,9 @@
-.TH STW 1 stw
+.TH STW 1 stw\-VERSION
 .SH NAME
 stw \- simple X text window
 .SH SYNOPSIS
 .B stw
+.RB [ \-V ]
 .RB [ \-t ]
 .RB [ \-x
 .IR pos ]
@@ -32,6 +33,9 @@ stw \- simple X text window
 .B stw
 is a simple X text window.
 .SH OPTIONS
+.TP
+.BI \-V
+Print the version information, then exit.
 .TP
 .BI \-t
 place window on top
